Revision history for {{$dist->name}}

{{$NEXT}}

0.006     2021-04-14 16:25:31+10:00 Australia/Melbourne
- Add clear method, to remove metric values

0.005     2020-12-03 21:41:43+11:00 Australia/Melbourne
- Escape special chars in label values (thanks, Danijel Tasov!)

0.004     2019-12-22 12:17:34+11:00 Australia/Melbourne
- Fix bug where metrics named "help" or "type" with timestamps would break

0.003     2019-12-22 11:17:22+11:00 Australia/Melbourne
- Add histogram support
- Add timestamp support (ben hengst)

0.002     2018-08-09 12:58:34+10:00 Australia/Melbourne
- Add simple PSGI app generator

0.001     2018-07-27 23:20:19+10:00 Australia/Melbourne