@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.015.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
 use strict;
 use warnings;
 
@@ -16,12 +16,14 @@ my %WriteMakefileArgs = (
   "LICENSE" => "perl",
   "NAME" => "Prometheus::Tiny",
   "PREREQ_PM" => {
+    "Carp" => 0,
     "strict" => 0,
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
     "HTTP::Request::Common" => 0,
     "Plack::Test" => 0,
+    "Test::Exception" => 0,
     "Test::More" => 0
   },
   "VERSION" => "0.006",
@@ -32,8 +34,10 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Carp" => 0,
   "HTTP::Request::Common" => 0,
   "Plack::Test" => 0,
+  "Test::Exception" => 0,
   "Test::More" => 0,
   "strict" => 0,
   "warnings" => 0
